update frontend (load data error wait for fix)